[package]
name = "rustybolts"
version = "0.1.0"
edition = "2018"
authors = [ "Nathan Henrie <nate@n8henrie.com>" ]
license = "MIT"
description = "My first bot for botwars.io"
repository = "https://github.com/n8henrie/rustybolts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
